# git-gud

./: .gitignore  .pr_body.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  E2E_TEST_REPORT.md  LICENSE  README.md  RELEASING.md  SECURITY_FIXES.md  STACK_VERIFICATION_AUDIT.md  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  docs-preview.yml  docs.yml  release.yml  update-lockfile.yml
crates/gg-cli/: Cargo.toml
crates/gg-cli/src/: main.rs
crates/gg-cli/tests/: integration_tests.rs  undo_integration.rs
crates/gg-cli/tests/integration_tests/: absorb.rs  checkout.rs  clean.rs  continue_flow.rs  drop.rs  helpers.rs  inbox.rs  land.rs  lint.rs  log.rs  ls.rs  main.rs  misc.rs  navigation.rs  rebase.rs  reconcile.rs  reorder.rs  restack.rs  run.rs  split.rs  squash.rs  sync.rs  undo.rs  unstack.rs  worktree.rs
crates/gg-core/: Cargo.toml
crates/gg-core/src/: config.rs  context.rs  error.rs  gh.rs  git.rs  glab.rs  immutability.rs  lib.rs  managed_body.rs  operations.rs  output.rs  provider.rs  stack.rs  stack_nav.rs  template.rs
crates/gg-core/src/commands/: absorb.rs  checkout.rs  clean.rs  completions.rs  drop_cmd.rs  inbox.rs  init.rs  land.rs  lint.rs  log.rs  ls.rs  mod.rs  nav.rs  rebase.rs  reconcile.rs  reorder.rs  reorder_tui.rs  restack.rs  run.rs  setup.rs  split.rs  split_protocol.rs  split_tui.rs  squash.rs  sync.rs  undo.rs  unstack.rs  unstack_tui.rs
crates/gg-core/tests/: immutability_integration.rs
crates/gg-mcp/: Cargo.toml
crates/gg-mcp/src/: main.rs  tools.rs
docs/: book.toml  git-gud-design.md  github-support-design.md
docs/plans/: 2026-03-13-split-design.md  2026-03-13-split-hunks-design.md  2026-03-13-split-plan.md  2026-03-13-split-tui-design.md  2026-03-14-global-config-setup-groups-design.md  2026-03-14-global-config-setup-groups-plan.md  2026-03-19-drop-arrange-design.md  2026-03-23-stack-workflow-roadmap-plan.md  2026-03-24-auto-add-gg-ids-deprecation-design.md  2026-03-24-auto-add-gg-ids-deprecation-plan.md  2026-03-24-stack-parent-trailers-design.md  2026-03-24-stack-parent-trailers-plan.md  2026-04-16-task-414-gg-log-smartlog-design.md
docs/research/: 413-investigate-possible-reasonable-additions-to-gg.md
docs/src/: SUMMARY.md  cicd-integration.md  configuration.md  core-concepts.md  faq.md  getting-started.md  introduction.md  mcp-server.md  shell-completions.md  worktrees.md
examples/: pr_template.md
pr-preview/pr-139/: 404.html  cicd-integration.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-14610364.js  searchindex-2befd9cc.js  searchindex-f40aad6e.js  shell-completions.html  toc-0702afd7.js  toc-43ebf4f0.js  toc.html  worktrees.html
pr-preview/pr-143/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-938c09d7.js  shell-completions.html
pr-preview/pr-145/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-30143418.js  shell-completions.html
pr-preview/pr-148/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-fae3f8ec.js  shell-completions.html
pr-preview/pr-150/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-d684f820.js  shell-completions.html
pr-preview/pr-151/: 404.html  core-concepts.html  getting-started.html  print.html  searchindex-3edfb22d.js  shell-completions.html
pr-preview/pr-152/: configuration.html  faq.html  index.html  searcher-c2a407aa.js  toc.html
pr-preview/pr-154/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-34033f79.js  shell-completions.html
pr-preview/pr-155/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-0de3bb7e.js  searchindex-2f02fd22.js  shell-completions.html
pr-preview/pr-156/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-bc514b2c.js  shell-completions.html  toc-a9e6ddec.js
pr-preview/pr-164/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  print.html  searcher-c2a407aa.js  searchindex-bec7e0f6.js  shell-completions.html
pr-preview/pr-166/: 404.html  configuration.html  core-concepts.html  faq.html  getting-started.html  index.html  print.html  searcher-c2a407aa.js  (+2 more)
src/: config.rs  error.rs  gh.rs  git.rs  glab.rs  main.rs  output.rs  provider.rs  stack.rs  template.rs
tests/: integration_tests.rs
(+1944 files in other folders)
