[package]
name = "git-gud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
spinners = "4.1.0"
git2 = { version = "0.18.1", features = ["default"] }
git2-ext = "0.6.1"
fancy = "0.3.1"
uuid = { version = "1.5.0", features = ["v4"] }
