[package]
name = "gg-mcp"
version = "0.4.3"
edition = "2021"
description = "MCP server for git-gud (gg) stacked-diffs tool"
authors = ["Nacho Lopez"]
license = "MIT"
repository = "https://github.com/mrmans0n/git-gud"

[[bin]]
name = "gg-mcp"
path = "src/main.rs"

[dependencies]
gg-core = { path = "../gg-core" }
